stopped header images from overlapping
in a pretty bootleg way

--- a/wp-content/themes/dartmouth/style.css
+++ b/wp-content/themes/dartmouth/style.css
@@ -3537,6 +3537,7 @@ a.post-thumbnail:hover {
 
 	.header-main {
 		padding-right: 0;
+		min-height: 145px;
 	}
 
 	.search-toggle {
